# severinopi

./: .gitignore  Pipfile  README.md  license  severino.py
cpp_samples/: CMakeLists.txt  face_recog_test.cpp  picamera.cpp
opencv_build/: build.sh  dlib.sh  download.sh  install-deps.sh  install.sh  prepare.sh  restore.sh  swapfile.sh  test-dlib.py  test-opencv-dlib.sh  test-opencv.py  test-picamera.py  test-picamera.sh
